# cross-clipper

./: .dockerignore  .gitignore  .superpowers-ci-split-report.md  .superpowers-e2e-report.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  docker-compose.ci.yml  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  core.yml  desktop.yml  docker.yml  e2e.yml  extension-e2e.yml  extension.yml  fuzz.yml  mobile.yml  server.yml
clients/cli/: package.json  tsconfig.json
clients/cli/src/: main.ts  storage.ts  ws.ts
clients/desktop/: background.html  flyout.html  index.html  package.json  toast.html  tsconfig.json  vite.config.ts  vitest.config.ts
clients/desktop/docs/: manual-smoke-checklist.md
clients/desktop/scripts/: make-icons.mjs
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/src/: clipboard.rs  hotkeys.rs  lib.rs  main.rs  tray.rs
clients/desktop/tests/: alerts.test.ts  app.test.tsx  bridge.test.ts  composeTarget.test.tsx  controller.test.ts  feedCard.test.tsx  feedRail.test.tsx  flyout.test.tsx  format.test.tsx  hotkeyConflict.test.ts  messages.test.ts  model.test.tsx  onboarding.test.tsx  probe.test.ts  scaffold.test.tsx  settings.test.ts  settingsUi.test.tsx  setup.ts  storage.test.ts  tauriMock.ts  theme.test.ts  toast.test.tsx  toastApp.test.tsx  useBridge.test.tsx
clients/extension/: manifest.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
clients/extension/e2e/: fixtures.ts  playwright.config.ts  server.ts
clients/extension/scripts/: build-firefox.mjs  make-icons.mjs
clients/extension/tests/: alerts.test.ts  appLive.test.tsx  appStatic.test.tsx  buildFirefox.test.ts  controller.test.ts  fakeBrowser.ts  feed.test.tsx  feedCard.test.tsx  feedStore.test.ts  format.test.tsx  menus.test.ts  messages.test.ts  onboarding.test.tsx  polyfillMock.ts  probe.test.ts  railComposeTarget.test.tsx  scaffold.test.tsx  settingsPage.test.tsx  settingsStore.test.ts  setup.ts  theme.test.ts  useWorker.test.tsx
clients/mobile/: App.tsx  app.json  index.share.tsx  jest.config.js  jest.setup.ts  metro.config.js  package.json  tsconfig.json
clients/mobile/__tests__/: shareExtensionDismiss.test.tsx
clients/mobile/jest-mocks/: NativeModules.js
clients/mobile/src/: App.tsx
clients/mobile/types/: expo-share-extension.d.ts
docs/superpowers/plans/: 2026-07-03-phase1-server-protocol-core-plan.md  2026-07-03-phase2-extension-docker-plan.md  2026-07-04-phase3-desktop-plan.md  2026-07-04-phase4-mobile-plan.md
docs/superpowers/specs/: 2026-07-03-cross-clipper-design.md  2026-07-03-desktop-client-design.md  2026-07-03-e2e-testing-design.md  2026-07-03-mobile-client-design.md  (+1 more)
scripts/: update-api-contract.sh
server/: pyproject.toml
server/scripts/: dump_openapi.py
server/src/crossclipper/: asgi.py  config.py  errors.py  health.py  main.py  protocol.py
server/src/crossclipper/auth/: deps.py  ratelimit.py  repo.py  router.py  schemas.py  service.py
server/src/crossclipper/db/: models.py  session.py
server/src/crossclipper/devices/: repo.py  router.py  schemas.py
server/src/crossclipper/items/: repo.py  router.py  schemas.py
server/src/crossclipper/realtime/: hub.py  router.py
server/tests/: conftest.py  helpers.py  test_auth.py  test_auth_scheme.py  test_config.py  test_data_dir.py  test_db_schema.py  test_devices.py  test_error_spine.py  test_health.py  test_items_create.py  test_items_sync.py  test_openapi_contract.py  test_presence.py  test_prune_isolation.py  test_ratelimit.py  test_realtime.py  test_session_rollback.py
server/tests_e2e/: conftest.py  test_contract_fuzz.py  test_journeys.py
(+144 files in other folders)
