[project]
name = "crossclipper-server"
version = "0.1.0"
description = "CrossClipper self-hosted sync server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.4",
    "bcrypt>=4.1",
    "python-ulid>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crossclipper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
