[project]
name = "crossclipper-server"
version = "0.1.0"
description = "CrossClipper self-hosted sync server"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.4",
    "bcrypt>=4.1",
    "python-ulid>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.15.20",
    "websockets>=13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crossclipper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that run against a live uvicorn subprocess (deselected from the default run)",
]
addopts = "-m 'not e2e'"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"tests_e2e/*" = ["E402"]
